--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,11 @@
 FROM n8nio/base:22
 
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
+
 RUN apk add --no-cache --update openssh sudo shadow bash
 RUN echo node ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/node && chmod 0440 /etc/sudoers.d/node
 RUN mkdir /workspaces && chown node:node /workspaces
-RUN npm install -g pnpm
+RUN npm config set registry https://registry.npmmirror.com && npm install -g pnpm
 
 USER node
-RUN mkdir -p ~/.pnpm-store && pnpm config set store-dir ~/.pnpm-store --global
+RUN mkdir -p ~/.pnpm-store && pnpm config set store-dir ~/.pnpm-store --global && pnpm config set registry https://registry.npmmirror.com --global
