feat: 开发容器设置后项目成功构建\n\n确认在初次开发容器设置和 pnpm 持久化配置后，项目成功编译。

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"mounts": [
 		"type=bind,source=${localWorkspaceFolder},target=/workspaces,consistency=cached",
 		"type=bind,source=${localEnv:HOME}/.ssh,target=/home/node/.ssh,consistency=cached",
-		"type=bind,source=${localEnv:HOME}/.n8n,target=/home/node/.n8n,consistency=cached"
+		"type=bind,source=${localEnv:HOME}/.n8n,target=/home/node/.n8n,consistency=cached",
+		"type=volume,source=n8n-pnpm-store,target=/home/node/.pnpm-store"
 	],
 	"forwardPorts": [8080, 5678, 5173],
 	"postCreateCommand": "corepack prepare --activate && pnpm install",
